--- a/website/thunderbird/releases/index.html
+++ b/website/thunderbird/releases/index.html
@@ -41,31 +41,33 @@
       </li>
       {% endfor -%}
       <li>
-        <strong><a href="0.1.html">0.1</a></strong>
+        <strong><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.1.html">0.1</a></strong>
         <ol>
-          <li><a href="0.2.html">0.2</a></li>
-          <li><a href="0.3.html">0.3</a></li>
-          <li><a href="0.4.html">0.4</a></li>
-          <li><a href="0.5.html">0.5</a></li>
-          <li><a href="0.6.html">0.6</a></li>
-          <li><a href="0.7.html">0.7</a></li>
-          <li><a href="0.8.html">0.8</a></li>
-          <li><a href="0.9.html">0.9</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.2.html">0.2</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.3.html">0.3</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.4.html">0.4</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.5.html">0.5</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.6.html">0.6</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.7.html">0.7</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.8.html">0.8</a></li>
+          <li><a href="http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/releases/0.9.html">0.9</a></li>
         </ol>
       </li>
     </ol>
-  </div>
+  </div>3.0/releasenotes/
 {% endblock %}
 
 {% macro get_link(int_version, version) %}
   {%- if int_version < 2 -%}
-    <a href="{{ version }}.html">{{ version }}</a>
+    <a href="https://www.mozilla.org/en-US/thunderbird/releases/{{ version }}.html">{{ version }}</a>
   {%- elif version == '2.0' -%}
-    <a href="../2.0.0.0/releasenotes/">{{ version }}</a>
+    <a href="https://www.mozilla.org/en-US/thunderbird/2.0.0.0/releasenotes/">{{ version }}</a>
   {%- elif version == '17.0.9' -%}
-    <a href="../17.0.9esr/releasenotes/">{{ version }}</a>
+    <a href="https://www.mozilla.org/en-US/thunderbird/17.0.9esr/releasenotes/">{{ version }}</a>
   {%- elif version == '17.0.10' -%}
-    <a href="../17.0.10esr/releasenotes/">{{ version }}</a>
+    <a href="https://www.mozilla.org/en-US/thunderbird/17.0.10esr/releasenotes/">{{ version }}</a>
+  {%- elif int_version < 31 -%}
+    <a href="https://www.mozilla.org/en-US/thunderbird/{{ version }}/releasenotes/">{{ version }}</a>
   {%- else -%}
     <a href="../{{ version }}/releasenotes/">{{ version }}</a>
   {%- endif -%}
