--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -53,6 +53,11 @@
                     <ul>
                         <li><a href="https://hg.mozilla.org/comm-central/">{{ _('comm-central') }}</a> {{ _('is the main Thunderbird repository.') }}</li>
                     </ul>
+                    <p>{{ _('There is also some code hosted on GitHub.') }}</p>
+                    <ul>
+                        <li>{{ _('<a href="https://github.com/thundernest">Thundernest</a> contains the code for Thunderbird.net (this site), as well as the Thunderbird web server setup scripts.') }}</li>
+                        <li>{{ _('<a href="https://github.com/mozilla-comm">https://github.com/mozilla-comm</a> contains several Thunderbird related repositories.') }}</li>
+                    </ul>
                 </section>
                 <section>
                     <h3>{{ _('Bugs') }}</h3>
@@ -63,6 +68,10 @@
                         <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">Thunderbird bug queries</a> is a wiki page with lots of useful searches.') }}</li>
                     </ul>
                 </section>
+                <section>
+                    <h3>{{ _('Extension Development') }}</h3>
+                    <p>{{ _('See the <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird/Thunderbird_extensions">documentation on MDN.</a>') }}</p>
+                </section>
             </div>
         </div>
     </section><!-- end #development -->
@@ -72,8 +81,7 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    <h3>{{ _('Heading') }}</h3>
-                    <p>{{ _('Content Text') }}</p>
+                    <p>{{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>. You can also discuss design in the #maildev irc channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse forum</a>.') }}</p>
                 </section>
             </div>
         </div>
@@ -84,8 +92,20 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    <h3>{{ _('Heading') }}</h3>
-                    <p>{{ _('Content Text') }}</p>
+                    <h3>Where documentation lives</h3>
+                    <ul>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home">The Thunderbird section of the Mozilla wiki.</a> ') }}</li>
+                    <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird">The Thunderbird section of MDN.</a> ') }}</li>
+                        <li></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Contributing to documentation</h3>
+                    <ul>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts">MozillaWiki:Policies/Accounts</a> - What you need to know to contribute to the wiki.') }}</li>
+                        <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/MDN/Getting_started">Getting started on MDN</a> - What you need to know to contribute to the Thunderbird section of MDN.') }}</li>
+
+                    </ul>
                 </section>
             </div>
         </div>
@@ -122,15 +142,33 @@
                     <ul>
                         <li><a href="https://support.mozilla.org/en-US/questions/thunderbird">{{ _('Thunderbird Support Forum') }}</a> </li>
                         <li><a href="https://discourse.mozilla.org/c/thunderbird">{{ _('Thunderbird category on Mozilla\'s Discourse.') }}</a> </li>
+                        <li>{{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29">Thunderbird Builds</a> on MozillaZine') }}</li>
                     </ul>
                 </section>
                 <section>
                     <h3>{{ _('Live Chat') }}</h3>
-                    <p>{{ _('List IRC Channels here.') }}</p>
+                    <h4>{{ _('IRC Channels on irc.mozilla.org') }}</h4>
+                    <ul>
+                        <li>{{ _('#maildev - For hacking on Thunderbird.') }}</li>
+                        <li>{{ _('#thunderbird - For general questions and support.') }}</li>
+                        <li>{{ _('#instantbird - For chatting.') }}</li>
+                        <li>{{ _('#tb-qa') - For QA chat.}}</li>
+                    </ul>
                 </section>
                 <section>
                     <h3>{{ _('Mailing Lists') }}</h3>
-                    <p>{{ _('Content Text') }}</p>
+                    <ul>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> - For high level topics.') }}</li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> - For those who help the users.') }}</li>
+                        <li>{{ _('<a href="https://mail.mozilla.org/listinfo/thunderbird-testers">thunderbird-testers</a> - For anyone who is helping test.') }}</li>
+                        <li>{{ _('<a href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a> - For add on related discussion.') }}</li>
+                        <li>{{ _('') }}</li>
+                        <li>{{ _('') }}</li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise">tb-enterprise</a> - tb-enterprise is a mailing list for ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>{{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels">Communication Channels</a> wiki page.') }}</p>
                 </section>
             </div>
         </div>
