--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -7,13 +7,13 @@
 {% block page_title %}{{ _('Get Involved') }}{% endblock %}
 
 {% block page_desc %}
-{{ _('Everything you need to know in order to get involved with Thunderbird.') }}
+{{ _('Everything you need to get involved with Thunderbird.') }}
 {% endblock %}
 
 {% block body_id %}get-involved{% endblock %}
 
 {% block page_css %}
-<link href="/media/css/thunderbird-features.css" rel="stylesheet" type="text/css" />
+<link href="/media/css/thunderbird-features.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
 {% block content %}
@@ -45,33 +45,52 @@
             <div class="col full">
                 <section>
                     <h3>{{ _('Getting Started') }}</h3>
-                    <p>{{ _('Read the <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Introduction">Developer Guide</a> on MDN. That will give you a general overview of the ecosystem Thunderbird is part of.') }}</p>
-                    <p>{{ _('<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions/Simple_Thunderbird_build">Simple Thunderbird build</a> on MDN is a good place to find how to get your first build completed.') }}</p>
+                    <p>{{ _('Read the <a
+                            href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Introduction">Developer
+                        Guide</a> on MDN. That will give you a general overview of the Mozilla ecosystem. Thunderbird
+                        participates in that ecosystem, so you will need that overview as you join in the work.</p>
+                    <p>Read the <a
+                                href="https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions/Simple_Thunderbird_build">Simple
+                            Thunderbird build</a> guide on MDN to learn how to run your first build successfully. You will learn how to get the code, set any necessary configuration, build the calendar, rebuild after checking out new code, etc. It\'s a good read. Don\'t just skim it.') }}</p>
                 </section>
                 <section>
                     <h3>{{ _('Code') }}</h3>
                     <p>{{ _('Code is located on Mozilla\'s Mercurial server.') }}</p>
                     <ul>
-                        <li>{{ _('<a href="https://hg.mozilla.org/comm-central/">comm-central</a> is the main Thunderbird repository.') }}</li>
+                        <li>{{ _('<a href="https://hg.mozilla.org/comm-central/">comm-central</a> is the main
+                            Thunderbird repository.') }}
+                        </li>
                     </ul>
                     <p>{{ _('There is also some code hosted on GitHub.') }}</p>
                     <ul>
-                        <li>{{ _('<a href="https://github.com/thundernest">Thundernest</a> contains the code for Thunderbird.net (this site), as well as the Thunderbird web server setup scripts.') }}</li>
-                        <li>{{ _('<a href="https://github.com/mozilla-comm">https://github.com/mozilla-comm</a> contains several Thunderbird related repositories.') }}</li>
+                        <li>{{ _('<a href="https://github.com/thundernest">Thundernest</a> contains the code for
+                            Thunderbird.net (this site), as well as the Thunderbird web server setup scripts.') }}
+                        </li>
+                        <li>{{ _('<a href="https://github.com/mozilla-comm">Thunderbird on GitHub</a> contains
+                            several Thunderbird related repositories.') }}
+                        </li>
                     </ul>
                 </section>
                 <section>
                     <h3>{{ _('Bugs') }}</h3>
-                    <p>{{ _('All Thunderbird bugs live on <a href="https://bugzilla.mozilla.org">Mozilla\'s Bugzilla</a>. Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out these pre-defined searches to test the waters:') }}</p>
+                    <p>{{ _('All Thunderbird bugs live on <a href="https://bugzilla.mozilla.org">Mozilla\'s Bugzilla</a>.
+                        Bugzilla is a powerful tool and can be intimidating if you are not used to it. So check out
+                        these pre-defined searches to test the waters:') }}</p>
                     <ul>
-                        <li>{{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy.') }}</li>
-                        <li>{{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a mentor who commits to helping you every step of the way.') }}</li>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">Thunderbird bug queries</a> is a wiki page with lots of useful searches.') }}</li>
+                        <li>{{ _('<a href="https://mzl.la/2oijxOd">"Good first bugs"</a> which are extra easy to try and fix when you are just starting out.') }}</li>
+                        <li>{{ _('<a href="http://www.joshmatthews.net/bugsahoy/?thunderbird=1">Mentored Bugs</a> have a
+                            mentor who commits to helping you every step of the way.') }}
+                        </li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Bug_Queries">Thunderbird bug queries</a>
+                            is a wiki page with lots of useful searches.') }}
+                        </li>
                     </ul>
                 </section>
                 <section>
-                    <h3>{{ _('Extension Development') }}</h3>
-                    <p>{{ _('See the <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird/Thunderbird_extensions">documentation on MDN.</a>') }}</p>
+                    <h3>{{ _('Extension/Add-On Development') }}</h3>
+                    <p>{{ _('See the <a
+                            href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird/Thunderbird_extensions">documentation
+                        on MDN.</a>') }}</p>
                 </section>
             </div>
         </div>
@@ -87,7 +106,10 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    <p>{{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>. You can also discuss design in the #maildev irc channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}</p>
+                    <p>{{ _('Please share ideas and concepts by posting them on <a
+                            href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>.
+                        You can also discuss design in the <a href="irc://irc.mozilla.org/maildev">#maildev</a> irc channel, or the <a
+                                href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}</p>
                 </section>
             </div>
         </div>
@@ -105,16 +127,25 @@
                 <section>
                     <h3>Where documentation lives</h3>
                     <ul>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home">The Thunderbird section</a> of the Mozilla wiki.') }}</li>
-                        <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird">The Thunderbird section</a> of MDN.') }}</li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home">The Thunderbird section</a> of the
+                            Mozilla wiki.') }}
+                        </li>
+                        <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/Mozilla/Thunderbird">The Thunderbird
+                            section</a> of MDN.') }}
+                        </li>
                     </ul>
                 </section>
                 <section>
                     <h3>Contributing to documentation</h3>
                     <ul>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts">MozillaWiki:Policies/Accounts</a> - What you need to know to contribute to the wiki. That page is applicable to the Thunderbird section.') }}</li>
-                        <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/MDN/Getting_started">Getting started on MDN</a> - What you need to know to contribute to the Thunderbird section of MDN.') }}</li>
-
+                        <li>{{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts">MozillaWiki:Policies/Accounts</a>
+                            - What you need to know to contribute to the wiki. That page is applicable to the
+                            Thunderbird section.') }}
+                        </li>
+                        <li>{{ _('<a href="https://developer.mozilla.org/en-US/docs/MDN/Getting_started">Getting started
+                            on MDN</a> - What you need to know to contribute to the Thunderbird section of MDN.') }}
+                        </li>
+                        <li>{{ _('Support users asking for help on the <a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}</li>
                     </ul>
                 </section>
             </div>
@@ -131,7 +162,9 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    {{ _('See <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
+                    {{ _('See <a
+                        href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird
+                    Localization</a> on MDN.') }}
                 </section>
             </div>
         </div>
@@ -147,7 +180,8 @@
         <div class="row">
             <div class="col full">
                 <section>
-                    {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">Thunderbird:Testing</a> on the Mozilla Wiki.') }}
+                    {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">Thunderbird:Testing</a> on the
+                    Mozilla Wiki.') }}
                 </section>
             </div>
         </div>
@@ -165,36 +199,65 @@
                 <section>
                     <h3>{{ _('Discussion Forums') }}</h3>
                     <ul>
-                        <li>{{ _('<a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support Forum</a>') }}</li>
-                        <li>{{ _('<a href="https://discourse.mozilla.org/c/thunderbird">Thunderbird category on Mozilla\'s Discourse.</a>') }}</li>
-                        <li>{{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29">Thunderbird Builds</a> on MozillaZine') }}</li>
-                        <li>{{ _('<a href="https://groups.google.com/forum/#!forum/mozilla.support.thunderbird">mozilla.support.thunderbird</a> is a Google Group for support.')}}</li>
+                        <li>{{ _('<a href="https://support.mozilla.org/en-US/questions/thunderbird">Thunderbird Support
+                            Forum</a>') }}
+                        </li>
+                        <li>{{ _('<a href="https://discourse.mozilla.org/">Mozilla\'s Discourse</a>') }}
+                            <ul>
+                                <li>{{ _('<a href="https://discourse.mozilla.org/c/thunderbird">Thunderbird</a>') }}</li>
+                                <li>{{ _('<a href="https://discourse.mozilla.org/c/thunderbird/beta">Thunderbird
+                                    Beta</a>') }}
+                                </li>
+                                <li>{{ _('<a href="https://discourse.mozilla.org/c/thunderbird/addons">Thunderbird
+                                    Add-Ons</a>') }}
+                                </li>
+                            </ul>
+                        </li>
+                        <li>{{ _('<a href="http://forums.mozillazine.org/viewforum.php?f=29">Thunderbird Builds</a> on
+                            MozillaZine - For help with building Thunderbird and using daily builds.') }}
+                        </li>
+                        <li>{{ _('<a href="https://groups.google.com/forum/#!forum/mozilla.support.thunderbird">mozilla.support.thunderbird</a>
+                            is a Google Group for support.')}}
+                        </li>
                     </ul>
                 </section>
                 <section>
                     <h3>{{ _('Live Chat') }}</h3>
                     <h4>{{ _('IRC Channels on irc.mozilla.org') }}</h4>
-                    <p>{{ _('You can use <a href="https://mibbit.com/">Mibbit.com</a> if you don\'t already have a preferred IRC client.') }}</p>
+                    <p>{{ _('You can use <a href="https://mibbit.com/">Mibbit.com</a> if you don\'t already have a
+                        preferred IRC client.') }}</p>
                     <ul>
-                        <li>{{ _('#maildev - For hacking on Thunderbird.') }}</li>
-                        <li>{{ _('#thunderbird - For general questions and support.') }}</li>
-                        <li>{{ _('#instantbird - For chatting.') }}</li>
-                        <li>{{ _('#tb-qa - For QA chat.') }}</li>
+                        <li>{{ _('<a href="irc://irc.mozilla.org/maildev">#maildev</a> - For hacking on Thunderbird.') }}</li>
+                        <li>{{ _('<a href="irc://irc.mozilla.org/thunderbird">#thunderbird</a> - For general questions and support.') }}</li>
+                        <li>{{ _('<a href="irc://irc.mozilla.org/instantbird">#instantbird</a> - For chatting.') }}</li>
+                        <li>{{ _('<a href="irc://irc.mozilla.org/tb-qa">#tb-qa</a> - For QA chat.') }}</li>
                     </ul>
                 </section>
                 <section>
                     <h3>{{ _('Mailing Lists') }}</h3>
                     <ul>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> - For high level topics.') }}</li>
-                        <li>{{ _('<a href="https://groups.google.com/forum/#!forum/tb-planning">tb-planning (Google Group)</a> - a mirror of <a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a>.') }}</li>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> - For those who help the users.') }}</li>
-                        <li>{{ _('<a href="https://mail.mozilla.org/listinfo/thunderbird-testers">thunderbird-testers</a> - For anyone who is helping test.') }}</li>
-                        <li>{{ _('<a href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a> - For add on related discussion.') }}</li>
-                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise">tb-enterprise</a> - tb-enterprise is a mailing list for ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}</li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-planning">tb-planning</a> (<a href="https://groups.google.com/forum/#!forum/tb-planning">Google Group Mirror</a>) - For high
+                            level topics.') }}
+                        </li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">tb-support-crew</a> -
+                            For those who help the users.') }}
+                        </li>
+                        <li>{{ _('<a
+                                href="https://mail.mozilla.org/listinfo/thunderbird-testers">thunderbird-testers</a> -
+                            For anyone who is helping test.') }}
+                        </li>
+                        <li>{{ _('<a
+                                href="https://lists.mozilla.org/listinfo/dev-apps-thunderbird">dev-apps-thunderbird</a>
+                            (<a href="https://groups.google.com/forum/#!forum/mozilla.dev.apps.thunderbird">Google Group Mirror</a>) - For technical and code related discussions, such as add-ons.') }}
+                        </li>
+                        <li>{{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-enterprise">tb-enterprise</a> -
+                            For ADMINISTRATORS to discuss large scale deployment and configuration of Thunderbird.') }}
+                        </li>
                     </ul>
                 </section>
                 <section>
-                    <p>{{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels">Communication Channels</a> wiki page.') }}</p>
+                    <p>{{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels">Communication
+                        Channels</a> wiki page.') }}</p>
                 </section>
             </div>
         </div>
